<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My App Portfolio!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bt1">Spotify Streamer</string>
    <string name="bt2">Football Scores App</string>
    <string name="bt3">Library App</string>
    <string name="bt4">Build It Bigger</string>
    <string name="bt5">XYZ Reader</string>
    <string name="bt6">Capstone</string>
</resources>
