<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#ffddf0ed"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="20dp"
        android:id="@+id/textView" />


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/bt1"
        android:layout_marginBottom="10dp"
        android:onClick="toastMsg"
        android:id="@+id/button1" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/bt2"
        android:layout_marginBottom="10dp"
        android:onClick="toastMsg"
        android:id="@+id/button2" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/bt3"
        android:layout_marginBottom="10dp"
        android:onClick="toastMsg"
        android:id="@+id/button3" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/bt4"
        android:layout_marginBottom="10dp"
        android:onClick="toastMsg"
        android:id="@+id/button4" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/bt5"
        android:layout_marginBottom="10dp"
        android:onClick="toastMsg"
        android:id="@+id/button5" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#fff02b4d"
        android:text="@string/bt6"
        android:layout_marginBottom="10dp"
        android:onClick="toastMsg"
        android:id="@+id/button6" />


</LinearLayout>
